[package]
name = "cli-socket"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
uuid = { version = "1.16.0", features = ["v4"] }
